--- a/Project 4/report/appendix_ozan.tex
+++ b/Project 4/report/appendix_ozan.tex
@@ -8,13 +8,13 @@
 \clearpage
 \subsection*{Appendix}
 
-The image stack has been processed with each 6 method used in this project. The processed images are put into a movie for each case and available in folder CHANGE in the project directory. We would like to briefly comment on these results.
+The image stack has been processed with each 6 method used in this project. The processed images are put into a movie for each case and available in folder \texttt{results} in the project directory. We would like to briefly comment on these results.
 
 \begin{enumerate}
 \item \em Michael1
 \item \em Michael2
-\item \em Alex1
-\item \em Alex2
+\item \emph{Ncut}, as mentioned in the results comparison, the Ncut algorithm seems to partition the background in addition to the particles themselves. As a result, the video shows the background split into various static regions. The detected particles themselves move as expected, and are distinguishable, but it is difficult to observe them as the clustering labels are inconsistent.
+\item \emph{Convexification}, the results are very clear as the entire background is completely black, and the only spots that are not black in the video are the particles themselves. The video also does not capture any unnecessary particles (though a few frames do have a particle on the left side, which can be decided as either a few cases of a false positive, or several cases of false negatives, which is an undetected particle otherwise).
 
 \item \emph{GVF}, the initial snake was chosen wide enough to capture the whole microtubule and high enough to accommodate frame to frame drift of the microtubule. As the GVF works on the image gradients, the parts of the initial snake that are on empty space remains undeformed after the processing. In addition, as GVF was designed for single particle detection, the snake does not split. These 2 factors cause the final GVF snake to have large empty spaces usually in triangular shapes. In the end, the generated movie is not of high quality as it missed a good deal of temporal, spatial and morphological information.
 
