Edited grammar in appendix intro

--- a/Project 4/report/Project4.tex
+++ b/Project 4/report/Project4.tex
@@ -452,7 +452,7 @@ The DRLSE algorithm is quite powerful as it provides flexibility in segmenting s
 \clearpage
 \subsection*{Appendix}
 
-The image stack has been processed with each 6 method used in this project. The processed images are put into a movie for each case and available in folder \texttt{results} in the project directory. We would like to briefly comment on these results.
+The image stack has been processed by each of 6 methods used in this project. The processed images are put into a movie for each case and available in folder \texttt{results} in the project directory. We would like to briefly comment on these results.
 
 \begin{enumerate}
 \item \emph{CST}: In order to seed each image, maxima that fell within the threshold were passed in as seed locations. The detected blobs are consistently larger than the visible particles, and only the larger particles are detected. However, the segmented images are very clean.
